@@ -32,6 +32,7 @@
 - Fixed nil pointer during unenroll {pull}23609[23609]
 - Fixed reenroll scenario {pull}23686[23686]
 - Fixed make status readable in the log. {pull}23849[23849]
+- Fixed Monitoring filebeat and metricbeat not connecting to Agent over GRPC {pull}23843[23843]
 
 ==== New features
 
